--- a/index.html
+++ b/index.html
@@ -56,35 +56,44 @@
 		</div>
 	</header>
 
+
+
 	<div id="fh5co-about" class="animate-box">
+		
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Sobre Mi</h2>
 				</div>
 			</div>
+			<p></p>
 			<div class="row">
-				<div class="col-md-4">
-					<ul class="info">
-						<li><span class="first-block">Nombre Completo:</span><span class="second-block">María de los Ángeles Martínez González</span></li>
-						<li><span class="first-block">Teléfono:</span><span class="second-block">+34 627 623 935</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">mangeles.martinez gonzalez@gmail.com</span></li>
-					</ul>
-				</div>
-				<div class="col-md-8">
-					
-					<p>El cambio es un signo de capacidad de superación, adaptación y flexibilidad, y por ello, el reto será seguir aprendiendo, creciendo y aportando valor en cada proyecto.</p>
-					 <p>Siempre dedico la máxima energía al desarrollo de mi trabajo y la consecución de los objetivos marcados.</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<!--  <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
-							<!--	<li><a href="#"><i class="icon-facebook2"></i></a></li> -->
-							<li><a href="https://www.linkedin.com/in/m-angeles-martinez-04aa74b3/"><i class="icon-linkedin2"></i></a></li>
-							<!--	<li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
-						</ul>
-					</p>
+				<div class="col-lg-14 d-flex flex-column align-items-stretch">
+					<div class="content ps-lg-4 d-flex flex-column justify-content-center">
+						<div class="col-md-8 col-md-offset-2">
+							<p></p>
+							<div class="col-lg-6">
+								<ul>
+									<li><span class="first-block"></span> <strong>Nombre Completo: </strong> <span class="second-block">María de los Ángeles Martínez González</span></li>
+									<li><span class="first-block"></span> <strong>Teléfono: </strong> <span class="second-block">+34 627 623 935</span></li>
+									<li><span class="first-block"></span> <strong>Email: </strong> <span class="second-block">mangeles.martinezgonza lez@gmail.com</span></li>
+								</ul>
+							</div>
+							<p></p>
+							<div class="col-lg-6">
+								<ul>
+									<p>El cambio es un signo de capacidad de superación, adaptación y flexibilidad, y por ello, el reto será seguir aprendiendo, creciendo y aportando valor en cada proyecto.</p>
+									<p>Siempre dedico la máxima energía al desarrollo de mi trabajo y la consecución de los objetivos marcados.</p>
+									<ul class="fh5co-social-icons">
+										<li><a href="https://www.linkedin.com/in/m-angeles-martinez-04aa74b3/"><i class="icon-linkedin2"></i></a></li>
+									</ul>
+								</ul>
+							</div>
+						</div>
+					</div>	
 				</div>
 			</div>
+			
 		</div>
 	</div>
 
@@ -101,7 +110,7 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Formación</h3></div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -113,37 +122,11 @@
 								</div>
 							</div>
 						</li>
-						<!--
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
-						-->
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Historial Laboral</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -161,7 +144,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -181,7 +164,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -198,7 +181,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -214,7 +197,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
