--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/FotoPerfil.PNG);"></div>
 							<h1><span>Mª Ángeles Martínez</span></h1>
-							<h3><span>Ejecutiva Crossbrand Internacional</span></h3>
+							<h3><span>Operaciones Omnicanal Crossbrand Internacional</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 								<!--	<li><a href="#"><i class="icon-twitter2"></i></a></li> -->
@@ -62,12 +62,6 @@
 		
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Sobre Mi</h2>
-				</div>
-			</div>
-			<p></p>
-			<div class="row">
 				<div class="col-lg-14 d-flex flex-column align-items-stretch">
 					<div class="content ps-lg-4 d-flex flex-column justify-content-center">
 						<div class="col-md-8 col-md-offset-2">
@@ -76,7 +70,7 @@
 								<ul>
 									<li><span class="first-block"></span> <strong>Nombre Completo: </strong> <span class="second-block">María de los Ángeles Martínez González</span></li>
 									<li><span class="first-block"></span> <strong>Teléfono: </strong> <span class="second-block">+34 627 623 935</span></li>
-									<li><span class="first-block"></span> <strong>Email: </strong> <span class="second-block">mangeles.martinezgonza lez@gmail.com</span></li>
+									<li><span class="first-block"></span> <strong>Email: </strong> <span class="second-block">mangeles.martinezgonzalez@gmail.com</span></li>
 								</ul>
 							</div>
 							<p></p>
@@ -136,7 +130,7 @@
 								<div class="timeline-body">
 									<p> · Propuesta, desarrollo y seguimiento de nuevos proyectos nacionales e internacionales para la consecucion de los objetivos.</p>
 									<p> · Proactividad y atención cuidad al cliente interno y externo orientada a resultados.</p>
-									<p> · Coordinación con otros departamentos y trabajo en estrecha colaboración con el e-commerce.</p>
+									<p> · Coordinación con otros departamentos y trabajo en estrecha colaboración con el departamento e-commerce.</p>
 									<p> · Aplicación de estrategias para fomentar la venta omnicanal Nacional e Internacional.</p>
 									<p> · Identificación y anticipación a posibles problemas y necesidades para lograr una mayor eficiencia y satisfacción del cliente.</p>
 									<p> · Análisis y presentación de informes de resultados mensuales y anuales.</p>
